<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="src_over"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/compararButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="160dp"
        android:text="Comparar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resultado"
        android:layout_width="215dp"
        android:layout_height="83dp"
        android:layout_marginBottom="36dp"
        android:text="Resultado"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="330dp"
        android:layout_marginTop="36dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/texto1"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:background="#DCCBFB"
            android:ems="10"
            android:hint="Ingresar texto"
            android:inputType="text" />

        <EditText
            android:id="@+id/texto2"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:background="#DCCBFB"
            android:ems="10"
            android:hint="Ingresar texto"
            android:inputType="text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>